Fix `  /entrypoint.sh: line 83: generate_commit_message: command not found` issue agin

--- a/action.yml
+++ b/action.yml
@@ -28,7 +28,7 @@ inputs:
     required: true
   commit_message:
     description: 'The commit message to use for the git commit'
-    default: 'Update %FILENAME% to %VERSION%'
+    default: 'Bump %FILENAME% to %VERSION%'
 runs:
   using: 'docker'
   image: 'Dockerfile'
